5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1835_2220.log
== TEST (2019-07-04 23:08:59) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[0], dtype=int)
for i in range(a.shape[0]):
	b[i]=sum(a[i,:])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:09:48) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[1]):
	b[i]=sum(a[i,:])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:10:28) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for j in range(a.shape[1]):
	b[j]=sum(a[:,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:11:21) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for j in range(a.shape[1]):
	b[j]=min(a[j,:])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:13:20) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(7, dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1])
	b[i,j]=min(a[i,j])
print(b)	
-- ERROR:
File "XXXX", line 6
    for j in range(a.shape[1])
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:13:35) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(7, dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1])
		b[i,j]=min(a[i,j])
print(b)	
-- ERROR:
File "XXXX", line 6
    for j in range(a.shape[1])
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:13:50) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(7, dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[i,j]=min(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 23:14:14) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(7, dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[i,j]=sum(a[i,j])
print(b)	
-- EXECUTION TIME:
1.27791
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1835/2220/main.py", line 7, in <module>
    b[i,j]=sum(a[i,j])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:14:17) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(7, dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[i,j]=sum(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:15:05) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(7, dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b=sum(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:16:50) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(7, dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b=max(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:17:31) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(7, dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:18:24) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a,shape[0][1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:18:43) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a,shape[1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 23:19:13) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[0][1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=(a[i,j])
print(b)	
-- EXECUTION TIME:
0.969145
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1835/2220/main.py", line 4, in <module>
    b=zeros(a.shape[0][1], dtype=int)
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:19:13) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[0][1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:23:52) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=(a[i,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:25:03) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[:,j]=(a[i,:])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:32:45) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=sum(a[:,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 23:32:59) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=sum(a[:,j])
print(b)	
-- EXECUTION TIME:
1.07545
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
[161 228 223 149  97 200 154]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:33:33) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=sum(a[:,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:33:36) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		b[j]=sum(a[:,j])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:35:26) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[1]):
	b[i]=sum(a[:,i])
for i in range(a.shape[1]):
	if(b[i]== max(b)):	
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:36:34) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[1]):
	b[i]=sum(a[:,i])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:37:02) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[1], dtype=int)
for i in range(a.shape[1]):
	b[i]=min(a[:,i])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:37:48) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[0], dtype=int)
for i in range(a.shape[0]):
	b[i]=min(a[:,i])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:38:59) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[0], dtype=int)
for i in range(a.shape[0]):
	b[i]=sum(a[:,i])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 23:40:02) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[0], dtype=int)
for i in range(a.shape[0]):
	b[i]=sum(a[:,i])
for i in range(a.shape[1]):
	if(b[i]== max(b)):	
		print(i+1)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
